syntax = "proto3";
package cores;

option go_package = "github.com/snple/kokomi/pb/cores;cores";

import "class_message.proto";
import "generic_message.proto";

// class
message ListClassRequest {
    pb.Page page = 1;
    string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ListClassResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Class class = 3;
}

message ViewClassByNameRequest {
    string device_id = 1;
    string name = 2;
}

message LinkClassRequest {
    string id = 1;
    sint32 status = 2;
}

message CloneClassRequest {
    string id = 1;
    string device_id = 2;
}

message PullClassRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message PullClassResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Class class = 3;
}

service ClassService {
    rpc Create(pb.Class) returns (pb.Class) {}
    rpc Update(pb.Class) returns (pb.Class) {}
    rpc View(pb.Id) returns (pb.Class) {}
    rpc ViewByName(ViewClassByNameRequest) returns (pb.Class) {}
    rpc ViewByNameFull(pb.Name) returns (pb.Class) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListClassRequest) returns (ListClassResponse) {}
    rpc Clone(CloneClassRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Class) {}
    rpc Pull(PullClassRequest) returns (PullClassResponse) {}
    rpc Sync(pb.Class) returns (pb.MyBool) {}
}

// attr
message ListAttrRequest {
    pb.Page page = 1;
    string device_id = 2;
    string class_id = 3;
    string tags = 4;
    string type = 5;
}

message ListAttrResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Attr attr = 3;
}

message ViewAttrByNameRequest {
    string device_id = 1;
    string name = 2;
}

message CloneAttrRequest {
    string id = 1;
    string class_id = 2;
}

message GetAttrValueByNameRequest {
    string device_id = 1;
    string name = 2;
}

message AttrNameValue {
    string device_id = 1;
    string id = 2;
    string name = 3;
    string value = 4;
    int64 updated = 5;
}

message PullAttrRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string class_id = 4;
    string type = 5;
}

message PullAttrResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Attr attr = 3;
}

service AttrService {
    rpc Create(pb.Attr) returns (pb.Attr) {}
    rpc Update(pb.Attr) returns (pb.Attr) {}
    rpc View(pb.Id) returns (pb.Attr) {}
    rpc ViewByName(ViewAttrByNameRequest) returns (pb.Attr) {}
    rpc ViewByNameFull(pb.Name) returns (pb.Attr) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListAttrRequest) returns (ListAttrResponse) {}
    rpc Clone(CloneAttrRequest) returns (pb.MyBool) {}
    rpc GetValue(pb.Id) returns (pb.AttrValue) {}
    rpc SetValue(pb.AttrValue) returns (pb.MyBool) {}
    rpc SetValueUnchecked(pb.AttrValue) returns (pb.MyBool) {}
    rpc GetValueByName(GetAttrValueByNameRequest) returns (AttrNameValue) {}
    rpc SetValueByName(AttrNameValue) returns (pb.MyBool) {}
    rpc SetValueByNameUnchecked(AttrNameValue) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Attr) {}
    rpc Pull(PullAttrRequest) returns (PullAttrResponse) {}
    rpc Sync(pb.Attr) returns (pb.MyBool) {}
}
